--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
@@ -44,9 +45,29 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+//    implementation fileTree(dir: 'libs', include: ['*.jar'])
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
+//    implementation 'androidx.appcompat:appcompat:1.1.0'
+//    implementation 'androidx.core:core-ktx:1.1.0'
+//    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+//    testImplementation 'junit:junit:4.12'
+//    androidTestImplementation 'androidx.test:runner:1.2.0'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+//    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+//    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
+//    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05"
+//    implementation "androidx.work:work-runtime:2.2.0"
+//    implementation 'com.google.android.material:material:1.0.0'
+//    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+//    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
 }
